refactor: rename OllamaRecommendationResponse to LlmRecommendationResponse
Generalized recommendation response class to support multiple LLM providers.
Extended LlmServiceFactory to support docker and local profiles.

Changes:
- Renamed OllamaRecommendationResponse → LlmRecommendationResponse
- Added docker and local profiles to LlmServiceFactory bean creation
- Updated all service classes to use renamed response class
- Fixed bean creation error in docker profile